--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@vercel/static-build": "^2.5.41",
     "next": "^15.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -35,6 +36,6 @@
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.3"
+    "vite": "^6.0.11"
   }
 }
